Added Reminder title to fromDocument method (this caused a null String)